--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -125,22 +125,6 @@
    volume = {283},
    year = {1998},
 }
-@article{Anderson1999,
-   abstract = {Homologous recombination and double-stranded DNA break repair in Escherichia coli are initiated by the multifunctional RecBCD enzyme. After binding to a double-stranded DNA end, the RecBCD enzyme unwinds and degrades the DNA processively. This processing is regulated by the recombination hot spot, Chi (χ: 5'-GCTGGTGG-3'), which induces a switch in the polarity of DNA degradation and activates RecBCD enzyme to coordinate the loading of the DNA strand exchange protein, RecA, onto the single-stranded DNA products of unwinding. Recently, a single mutation in RecB, Asp-1080 → Ala, was shown to create an enzyme (RecB(D1080A)CD) that is a processive helicase but not a nuclease. Here we show that the RecB(D1080A)CD enzyme is also unable to coordinate the loading of the RecA protein, regardless of whether χ sites are present in the DNA. However, the RecB(D1080A)CD enzyme does respond to χ sites by inactivating in a χ-dependent manner. These data define a locus of the RecBCD enzyme that is essential not only for nuclease function but also for the coordination of RecA protein loading.},
-   author = {Daniel G. Anderson and Jason J. Churchill and Stephen C. Kowalczykowski},
-   doi = {10.1074/jbc.274.38.27139},
-   issn = {00219258},
-   issue = {38},
-   journal = {Journal of Biological Chemistry},
-   month = {9},
-   pages = {27139-27144},
-   pmid = {10480929},
-   publisher = {Elsevier},
-   title = {A single mutation, RecB(D1080A), eliminates RecA protein loading but not Chi recognition by RecBCD enzyme},
-   volume = {274},
-   url = {http://www.jbc.org/article/S0021925819551365/fulltext http://www.jbc.org/article/S0021925819551365/abstract https://www.jbc.org/article/S0021-9258(19)55136-5/abstract},
-   year = {1999},
-}
 @article{Ivancic-Bace_2003,
    abstract = {The RecA loading activity of the RecBCD enzyme, together with its helicase and 5′ → 3′ exonuclease activities, is essential for recombination in Escherichia coli. One particular mutant in the nuclease catalytic center of RecB, i.e., recB1080, produces an enzyme that does not have nuclease activity and is unable to load RecA protein onto single-stranded DNA. There are, however, previously published contradictory data on the recombination proficiency of this mutant. In a recF- background the recB1080 mutant is recombination deficient, whereas in a recF+ genetic background it is recombination proficient. A possible explanation for these contrasting phenotypes may be that the RecFOR system promotes RecA-single-strand DNA filament formation and replaces the RecA loading defect of the RecB1080CD enzyme. We tested this hypothesis by using three in vivo assays. We compared the recombination proficiencies of recB1080, rec0, recR, and RecF single mutants and recB1080 rec0, recB1080 recR, and recB1080 recF double mutants. We show that RecFOR functions rescue the repair and recombination deficiency of the recB1080 mutant and that RecA loading is independent of RecFOR in the recB1080 recD double mutant where this activity is provided by the RecB1080C(D-) enzyme. According to our results as well as previous data, three essential activities for the initiation of recombination in the recB1080 mutant are provided by different proteins, i.e., helicase activity by RecB1080CD, 5′ → 3′ exonuclease by RecJ- and RecA-single-stranded DNA filament formation by RecFOR.},
    author = {Ivana Ivančić-Baće and Petra Peharec and Sunčana Moslavac and Nikolina Škrobot and Erika Salaj-Šmic and Krunoslav Brčić-Kostić},
@@ -360,4 +344,66 @@
    volume = {217},
    url = {https://doi.org/10.1083/jcb.201803020},
    year = {2018},
+}
+@article{Horii1968,
+   abstract = {Abstract— Degradation of the DNA of a rec‐ mutant of Escherichia coli K12 (JC1569 b) induced by u.v. light was investigated. The rate of degradation was much larger by growing bacteria than by stationary cells. When growing bacteria were starved for amino acids, their DNA became resistant to irradiation. The mode of u.v.‐induced degradation was investigated by comparing the time course of release from the acid‐insoluble fraction of the label for two growing cultures; the one was pulse‐labeled with 3H‐thymidine and the other was pulse‐labeled and chased thereafter for 12 min. It was found that the label incorporated into the former culture begins to be lost from the acid‐insoluble fraction prior to the loss of the label incorporated into the latter culture. It was concluded that breakdown of the replicating point precedes degradation of the bulk of the DNA. This result suggested that the replicating point is a sensitive site to irradiation and the u.v.‐induced degradation of DNA seemed to be influenced by the state of chromosome at the time of irradiation. Experiments of centrifugation of lysed spheroplasts of bacteria uniformly labeled with 3H‐thymidine in alkaline sucrose demonstrated that DNA of low molecular weight appeared after irradiation with only 5 ergs/ mm2, and that the molecular weight could not be restored by post‐irradiation incubation. Considering these results, an hypothesis is proposed concerning the initiation of induced degradation of the DNA of the rec‐ mutant. Copyright © 1968, Wiley Blackwell. All rights reserved},
+   author = {Z. I. Horii and K. Suzuki},
+   doi = {10.1111/J.1751-1097.1968.TB05850.X},
+   issn = {1751-1097},
+   issue = {2},
+   journal = {Photochemistry and Photobiology},
+   month = {8},
+   pages = {93-105},
+   publisher = {John Wiley & Sons, Ltd},
+   title = {Degradation of the DNA of Escherichia coli K12 rec- (JC1569b) after irradiation with ultraviolet light},
+   volume = {8},
+   url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1751-1097.1968.tb05850.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1751-1097.1968.tb05850.x https://onlinelibrary.wiley.com/doi/10.1111/j.1751-1097.1968.tb05850.x},
+   year = {1968},
+}
+@article{Chow2007,
+   abstract = {Chow, K-H. and Courcelle, J. RecBCD and RecJ/RecQ Initiate DNA Degradation on Distinct Substrates in UV-Irradiated Escherichia coli. Radiat. Res. 168, 499–506 (2007).After UV irradiation, recA mutants fail to recover replication, and a dramatic and nearly complete degradation of the genomic DNA occurs. Although the RecBCD helicase/nuclease complex is known to mediate this catastrophic DNA degradation, it is not known how or where this degradation is initiated. Previous studies have speculated that RecBCD targets and initiates degradation from the nascent DNA at replication forks arrested by DNA damage. To test this question, we examined which enzymes were responsible for the degradation of genomic DNA and the nascent DNA in UV-irradiated recA cells. We show here that, although RecBCD degrades the genomic DNA after UV irradiation, it does not target the nascent DNA at arrested replication forks. Instead, we observed that the nascent DNA at arrested replication forks in recA cultures is degraded by RecJ/RecQ, similar to what occurs in wild-type cultures. These findings indicate that the genomic DNA degradation and nascent DNA degradation in UV-irradiated recA mutants are mediated separately through RecBCD and RecJ/RecQ, respectively. In addition, they demonstrate that RecBCD initiates degradation at a site(s) other than the arrested replication fork directly.},
+   author = {Kin-Hoe Chow and Justin Courcelle},
+   doi = {10.1667/RR1033.1},
+   issn = {0033-7587},
+   issue = {4},
+   journal = {Radiation Research},
+   month = {10},
+   pages = {499-506},
+   publisher = {Radiation Research Society},
+   title = {RecBCD and RecJ/RecQ Initiate DNA Degradation on Distinct Substrates in UV-Irradiated Escherichia coli},
+   volume = {168},
+   url = {https://bioone.org/journals/radiation-research/volume-168/issue-4/RR1033.1/RecBCD-and-RecJ-RecQ-Initiate-DNA-Degradation-on-Distinct-Substrates/10.1667/RR1033.1.full https://bioone.org/journals/radiation-research/volume-168/issue-4/RR1033.1/RecBCD-and-RecJ-RecQ-Initiate-DNA-Degradation-on-Distinct-Substrates/10.1667/RR1033.1.short},
+   year = {2007},
+}
+@article{Wang2000,
+   abstract = {The RecBCD enzyme of Escherichia coli is an ATP-dependent DNA exonuclease and a helicase. Its exonuclease activity is subject to regulation by an octameric nucleotide sequence called χ. In this study, site-directed mutations were made in the carboxyl-terminal nuclease domain of the RecB subunit, and their effects on RecBCD's enzymatic activities were investigated. Mutation of two amino acid residues, Asp1067 and Lys1082, abolished nuclease activity on both single- and double-stranded DNA. Together with Asp1080, these residues compose a motif that is similar to one shown to form the active site of several restriction endonucleases. The nuclease reactions catalyzed by the RecBCD enzyme should therefore follow the same mechanism as these restriction endonucleases. Furthermore, the mutant enzymes were unable to produce χ-specific fragments that are thought to result from the 3'-5' and 5'-3' single-stranded exonuclease activities of the enzyme during its reaction with χ-containing double-stranded DNA. The results show that the nuclease active site in the RecB C-terminal 30-kDa domain is the universal nuclease active site of RecBCD that is responsible for DNA degradation in both directions during the reaction with double-stranded DNA. A novel explanation for the observed nuclease polarity switch and RecBCD-DNA interaction is offered.},
+   author = {Jingdi Wang and Ruiwu Chen and Douglas A. Julin},
+   doi = {10.1074/jbc.275.1.507},
+   issn = {00219258},
+   issue = {1},
+   journal = {Journal of Biological Chemistry},
+   month = {1},
+   pages = {507-513},
+   pmid = {10617645},
+   publisher = {Elsevier},
+   title = {A single nuclease active site of the Escherichia coli RecBCD enzyme catalyzes single-stranded DNA degradation in both directions},
+   volume = {275},
+   url = {http://www.jbc.org/article/S0021925819528927/fulltext http://www.jbc.org/article/S0021925819528927/abstract https://www.jbc.org/article/S0021-9258(19)52892-7/abstract},
+   year = {2000},
+}
+@article{Anderson1999,
+   abstract = {Homologous recombination and double-stranded DNA break repair in Escherichia coli are initiated by the multifunctional RecBCD enzyme. After binding to a double-stranded DNA end, the RecBCD enzyme unwinds and degrades the DNA processively. This processing is regulated by the recombination hot spot, Chi (χ: 5'-GCTGGTGG-3'), which induces a switch in the polarity of DNA degradation and activates RecBCD enzyme to coordinate the loading of the DNA strand exchange protein, RecA, onto the single-stranded DNA products of unwinding. Recently, a single mutation in RecB, Asp-1080 → Ala, was shown to create an enzyme (RecB(D1080A)CD) that is a processive helicase but not a nuclease. Here we show that the RecB(D1080A)CD enzyme is also unable to coordinate the loading of the RecA protein, regardless of whether χ sites are present in the DNA. However, the RecB(D1080A)CD enzyme does respond to χ sites by inactivating in a χ-dependent manner. These data define a locus of the RecBCD enzyme that is essential not only for nuclease function but also for the coordination of RecA protein loading.},
+   author = {Daniel G. Anderson and Jason J. Churchill and Stephen C. Kowalczykowski},
+   doi = {10.1074/jbc.274.38.27139},
+   issn = {00219258},
+   issue = {38},
+   journal = {Journal of Biological Chemistry},
+   month = {9},
+   pages = {27139-27144},
+   pmid = {10480929},
+   publisher = {Elsevier},
+   title = {A single mutation, RecB(D1080A), eliminates RecA protein loading but not Chi recognition by RecBCD enzyme},
+   volume = {274},
+   url = {http://www.jbc.org/article/S0021925819551365/fulltext http://www.jbc.org/article/S0021925819551365/abstract https://www.jbc.org/article/S0021-9258(19)55136-5/abstract},
+   year = {1999},
 }
