Added a few references

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,19 +1,3 @@
-@article{Odsbu2014,
-   abstract = {The nucleoids of undamaged Escherichia coli cells have a characteristic shape and number, which is dependent on the growth medium. Upon induction of the SOS response by a low dose of UV irradiation an extensive reorganization of the nucleoids occurred. Two distinct phases were observed by fluorescence microscopy. First, the nucleoids were found to change shape and fuse into compact structures at midcell. The compaction of the nucleoids lasted for 10-20 min and was followed by a phase where the DNA was dispersed throughout the cells. This second phase lasted for ~1 h. The compaction was found to be dependent on the recombination proteins RecA, RecO and RecR as well as the SOS-inducible, SMC (structural maintenance of chromosomes)- like protein RecN. RecN protein is produced in high amounts during the first part of the SOS response. It is possible that the RecN-mediated 'compact DNA' stage at the beginning of the SOS response serves to stabilize damaged DNA prior to recombination and repair. © 2014 The Authors.},
-   author = {Ingvild Odsbu and Kirsten Skarstad},
-   doi = {10.1099/MIC.0.075051-0/CITE/REFWORKS},
-   issn = {14652080},
-   issue = {PART 5},
-   journal = {Microbiology (United Kingdom)},
-   month = {5},
-   pages = {872-882},
-   pmid = {24615185},
-   publisher = {Microbiology Society},
-   title = {DNA compaction in the early part of the SOS response is dependent on RecN and RecA},
-   volume = {160},
-   url = {https://www.microbiologyresearch.org/content/journal/micro/10.1099/mic.0.075051-0},
-   year = {2014},
-}
 @article{Lepore2019a,
    abstract = {Cell biology is increasingly dependent on quantitative methods resulting in the need for microscopic labelling technologies that are highly sensitive and specific. Whilst the use of fluorescent proteins has led to major advances, they also suffer from their relatively low brightness and photo-stability, making the detection of very low abundance proteins using fluorescent protein-based methods challenging. Here, we characterize the use of the self-labelling protein tag called HaloTag, in conjunction with an organic fluorescent dye, to label and accurately count endogenous proteins present in very low numbers (<7) in individual Escherichia coli cells. This procedure can be used to detect single molecules in fixed cells with conventional epifluorescence illumination and a standard microscope. We show that the detection efficiency of proteins labelled with the HaloTag is ≥80%, which is on par or better than previous techniques. Therefore, this method offers a simple and attractive alternative to current procedures to detect low abundance molecules.},
    author = {Alessia Lepore and Hannah Taylor and Dirk Landgraf and Burak Okumus and Sebastián Jaramillo-Riveri and Lorna McLaren and Somenath Bakshi and Johan Paulsson and M. El Karoui},
@@ -108,6 +92,22 @@
    title = {Structural basis for the inhibition of RecBCD by Gam and its synergistic antibacterial effect with quinolones},
    volume = {5},
    year = {2016},
+}
+@article{Odsbu2014,
+   abstract = {The nucleoids of undamaged Escherichia coli cells have a characteristic shape and number, which is dependent on the growth medium. Upon induction of the SOS response by a low dose of UV irradiation an extensive reorganization of the nucleoids occurred. Two distinct phases were observed by fluorescence microscopy. First, the nucleoids were found to change shape and fuse into compact structures at midcell. The compaction of the nucleoids lasted for 10-20 min and was followed by a phase where the DNA was dispersed throughout the cells. This second phase lasted for ~1 h. The compaction was found to be dependent on the recombination proteins RecA, RecO and RecR as well as the SOS-inducible, SMC (structural maintenance of chromosomes)- like protein RecN. RecN protein is produced in high amounts during the first part of the SOS response. It is possible that the RecN-mediated 'compact DNA' stage at the beginning of the SOS response serves to stabilize damaged DNA prior to recombination and repair. © 2014 The Authors.},
+   author = {Ingvild Odsbu and Kirsten Skarstad},
+   doi = {10.1099/MIC.0.075051-0/CITE/REFWORKS},
+   issn = {14652080},
+   issue = {PART 5},
+   journal = {Microbiology (United Kingdom)},
+   month = {5},
+   pages = {872-882},
+   pmid = {24615185},
+   publisher = {Microbiology Society},
+   title = {DNA compaction in the early part of the SOS response is dependent on RecN and RecA},
+   volume = {160},
+   url = {https://www.microbiologyresearch.org/content/journal/micro/10.1099/mic.0.075051-0},
+   year = {2014},
 }
 @article{Yu1998,
    abstract = {The recombinational hot spot X modulates the nuclease and helicase activities of the RecBCD enzyme, leading to generation of an early DNA intermediate for homologous recombination. Here we identify the subunit location of the nuclease active site in RecBCD. The isolated RecB protein cleaves circular single-stranded M13 phage DNA, but RecB1-929, comprising only the 100 kDa N-terminal domain of RecB, does not. We reported previously that the reconstituted RecB1-929CD enzyme also is not a nuclease, suggesting that the C-terminal 30 kDa domain of RecB is a non-specific ssDNA endonuclease. However, we were unable to detect nuclease activity with the subtilisin-generated C-terminal 30 kDa fragment of RecB. Since the subtilisin-generated fragment did not bind to a ssDNA-agarose column, we designed a chimeric enzyme by attaching the C-terminal 30 kDa domain of RecB to the gene 32 protein of T4 phage, a ssDNA binding protein that does not have strand scission ability. In addition, Asp427 in the chimeric enzyme (Asp1080 in RecB), a residue that is conserved among several RecB homologs, was substituted to alanine (the D427A mutant). The wild-type chimeric enzyme cleaves the M13 DNA and the D427A mutation abolishes the endonuclease activity of the chimeric enzyme but does not affect its DNA binding ability. This finding indicates an unusual bipartite nature in the structural organization of RecB, in which the DNA-binding function is located in the N-terminal 100 kDa domain and the nuclease catalytic domain is located in the C-terminal 30 kDa domain. The purified RecB(D1080A)CD mutant is a processive helicase but not a nuclease, demonstrating that RecBCD has a single nuclease active site in the C terminal 30 kDa domain of RecB.},
@@ -406,4 +406,67 @@
    volume = {274},
    url = {http://www.jbc.org/article/S0021925819551365/fulltext http://www.jbc.org/article/S0021925819551365/abstract https://www.jbc.org/article/S0021-9258(19)55136-5/abstract},
    year = {1999},
+}
+@article{Huang2021,
+   abstract = {The widely used quinolone antibiotics act by trapping prokaryotic type IIA topoisomerases, resulting in irreversible topoisomerase cleavage complexes (TOPcc). Whereas the excision repair pathways of TOPcc in eukaryotes have been extensively studied, it is not known whether equivalent repair pathways for prokaryotic TOPcc exist. By combining genetic, biochemical, and molecular biology approaches, we demonstrate that exonuclease VII (ExoVII) excises quinolone-induced trapped DNA gyrase, an essential prokaryotic type IIA topoisomerase. We show that ExoVII repairs trapped type IIA TOPcc and that ExoVII displays tyrosyl nuclease activity for the tyrosyl-DNA linkage on the 5′-DNA overhangs corresponding to trapped type IIA TOPcc. ExoVII-deficient bacteria fail to remove trapped DNA gyrase, consistent with their hypersensitivity to quinolones. We also identify an ExoVII inhibitor that synergizes with the antimicrobial activity of quinolones, including in quinolone-resistant bacterial strains, further demonstrating the functional importance of ExoVII for the repair of type IIA TOPcc.},
+   author = {Shar Yin N. Huang and Stephanie A. Michaels and Brianna B. Mitchell and Nadim Majdalani and Arnaud Vanden Broeck and Andres Canela and Yuk Ching Tse-Dinh and Valerie Lamour and Yves Pommier},
+   doi = {10.1126/SCIADV.ABE0384/SUPPL_FILE/ABE0384_SM.PDF},
+   issn = {23752548},
+   issue = {10},
+   journal = {Science Advances},
+   month = {3},
+   pmid = {33658195},
+   publisher = {American Association for the Advancement of Science},
+   title = {Exonuclease VII repairs quinolone-induced damage by resolving DNA gyrase cleavage complexes},
+   volume = {7},
+   url = {https://www.science.org/doi/10.1126/sciadv.abe0384},
+   year = {2021},
+}
+@article{Wentzell2000,
+   abstract = {Quinolone drugs can inhibit bacterial DNA replication, via interaction with the type II topoisomerase DNA gyrase. Using a DNA template containing a preferred site for quinolone-induced gyrase cleavage, we have demonstrated that the passage of the bacteriophage T7 replication complex is blocked in vitro by the formation of a gyrase-drug-DNA complex. The majority of the polymerase is arrested approximately 10 bp upstream of this preferred site, although other minor sites of blocking have been observed. The ability of mutant gyrase proteins to arrest DNA replication in vitro has been investigated. Gyrase containing mutations in the A subunit at either the active-site tyrosine (Tyr122) or Ser83 (a residue known to be involved in quinolone interaction) failed to halt the progress of the polymerase. A low-level, quinolone-resistant mutation in the B subunit of gyrase showed reduced blocking compared to wild-type. We have demonstrated that DNA cleavage and replication blocking occur on similar time-scales and we conclude that formation of the cleavable complex is a prerequisite for polymerase blocking. Additionally, we have shown that collision of the replication proteins with the gyrase-drug-DNA complex is not sufficient to render this complex irreversible and that further factors must be involved in processing this stalled complex. © 2000 Academic Press.},
+   author = {L. M. Wentzell and A. Maxwell},
+   doi = {10.1006/JMBI.2000.4266},
+   issn = {0022-2836},
+   issue = {5},
+   journal = {Journal of Molecular Biology},
+   keywords = {Ciprofloxacin,Supercoiling,Topoisomerase},
+   month = {12},
+   pages = {779-791},
+   pmid = {11124026},
+   publisher = {Academic Press},
+   title = {The Complex of DNA Gyrase and Quinolone Drugs on DNA Forms a Barrier to the T7 DNA Polymerase Replication Complex},
+   volume = {304},
+   year = {2000},
+}
+@article{Drlica2008,
+   abstract = {The fluoroquinolones are broad-spectrum antibacterial agents that are becoming increasingly popular as bacterial resistance erodes the effectiveness of other agents (fluoroquin-olone sales accounted for 18% of the antibacterial market in 2006) (41). One of the attractive features of the quinolones is their ability to kill bacteria rapidly, an ability that differs widely among the various derivatives. For example, quinolones differ in rate and extent of killing, in the need for aerobic metabolism to kill cells, and in the effect of protein synthesis inhibitors on quinolone lethality. Understanding the mechanisms underlying these differences could lead to new ways for identifying the most bactericidal quinolone derivatives. Before describing the types of damage caused by the quin-olones, it is useful to define lethal activity. Operationally, it is the ability of drug treatment to reduce the number of viable cells, usually measured as CFU on drug-free agar after treatment. This assay is distinct from measurements that detect inhibition of growth (e.g., MIC), since with the latter bacteria are exposed to drug throughout the measurement. The distinction between killing and blocking growth is important because it allows susceptibility determinations to be related to particular biological processes. For example, inhibition of growth is typically reversed by the removal of drug, while cell death is not. Thus, biochemical events associated with blocking growth should be readily reversible, while those responsible for cell death should be difficult to reverse. Reversibility can be used to distinguish among quinolone derivatives and assign functions to particular aspects of drug structure. Moreover, protective functions, such as repair and stress responses, can be distinguished by whether their absence affects inhibition of growth, killing, or both. The intracellular targets of the quinolones are two DNA topoisomerases: gyrase and topoisomerase IV. Gyrase tends to be the primary target in gram-negative bacteria, while topo-isomerase IV is preferentially inhibited by most quinolones in gram-positive organisms (28). Both enzymes use a double-strand DNA passage mechanism, and it is likely that quinolone biochemistry is similar for both. However, physiological differences between the enzymes exist, some of which may bear on quinolone lethality. In the present minireview we consider cell death through a two-part "poison" hypothesis in which the quinolones form reversible drug-topoisomerase-DNA complexes that subsequently lead to several types of irreversible (lethal) damage. Other consequences of quinolone treatment, such as depletion of gyrase and topoisomerase IV activity, are probably less immediate (42). To provide a framework for considering quin-olone lethality, we begin by briefly describing the drug-topo-isomerase-DNA complexes. Readers interested in a more comprehensive discussion of quinolones are referred to a previously published work (28). QUINOLONE-TOPOISOMERASE-DNA COMPLEXES As a normal part of their reaction mechanism, gyrase and topoisomerase IV introduce a pair of staggered, single-strand breaks (nicks) into DNA and become covalently bound to the 5 ends of the cleaved DNA (55, 57). Quinolones bind rapidly to enzyme-DNA complexes (35), probably before DNA cleav-age occurs (Fig. 1, step b 1); drug binding occurs with mutant gyrase (gyrA) or topoisomerase IV (parC) that fails to cleave DNA (9, 54). After drug binding, a slower, DNA cleavage-associated step occurs (35) that results in drug-mediated inhibition of religation of the DNA ends by topoisomerases (1). In a sense, quinolones trap the bacterial type II topoisomerases on DNA (17, 23, 73, 75) (Fig. 1, step b 2). The resulting structures have been termed cleavable, cleavage, and cleaved complexes. In the present study we refer to them as cleaved complexes to emphasize that phosphodiester bonds in the DNA moiety are broken (the term ternary complex is reserved for the early step in drug-enzyme-DNA complex formation in which the DNA is unbroken). A variety of quinolone-mediated phenomena follow from formation of cleaved complexes. To better understand lethal processes, we briefly describe key features of the DNA and protein components of the complexes. Since crystal structures have not been reported for cleaved complexes, tentative inferences concerning the relative positions of drug, protein, and DNA are drawn from biochemical experiments, partial structures of the bacterial topoisomerases, and complete structures of eukaryotic topoisomerase II. Evidence for the DNA being cleaved derives from the recovery of DNA fragments when cleaved complexes are treated with protein denaturants, such as sodium dodecyl sulfate (SDS) (Fig. 1, step g). These DNA fragments are covalently bound to the GyrA or ParC proteins (55, 57). While cleaved complexes preferentially form at particular sites on DNA (44,},
+   author = {Karl Drlica and Muhammad Malik and Robert J. Kerns and Xilin Zhao},
+   doi = {10.1128/AAC.01617-06/ASSET/B6EDCDCF-6953-4DB0-B2F3-FAA0ECD98836/ASSETS/GRAPHIC/ZAC0020870530004.JPEG},
+   issn = {00664804},
+   issue = {2},
+   journal = {Antimicrobial Agents and Chemotherapy},
+   month = {2},
+   pages = {385-392},
+   pmid = {17724149},
+   publisher = {American Society for Microbiology},
+   title = {Quinolone-mediated bacterial death},
+   volume = {52},
+   url = {https://journals.asm.org/doi/10.1128/aac.01617-06},
+   year = {2008},
+}
+@article{Zhao2006,
+   abstract = {Inhibition of DNA replication in an Escherichia coli dnaB-22 mutant failed to block quinolone-mediated lethality. Inhibition of protein synthesis by chloramphenicol inhibited nalidixic acid lethality and, to a lesser extent, ciprofloxacin lethality in both dnaB-22 and wild-type cells. Thus, major features of quinolone-mediated lethality do not depend on ongoing replication. Copyright © 2006, American Society for Microbiology. All Rights Reserved.},
+   author = {Xilin Zhao and Muhammad Malik and Nymph Chan and Alex Drlica-Wagner and Jian Ying Wang and Xinying Li and Karl Drlica},
+   doi = {10.1128/AAC.50.1.362-364.2006/ASSET/E15EEB01-E93E-4389-8B63-39B68A02C5D1/ASSETS/GRAPHIC/ZAC0010655310002.JPEG},
+   issn = {00664804},
+   issue = {1},
+   journal = {Antimicrobial Agents and Chemotherapy},
+   month = {1},
+   pages = {362-364},
+   pmid = {16377712},
+   publisher = {American Society for Microbiology},
+   title = {Lethal action of quinolones against a temperature-sensitive dnaB replication mutant of Escherichia coli},
+   volume = {50},
+   url = {https://journals.asm.org/doi/10.1128/aac.50.1.362-364.2006},
+   year = {2006},
 }
