--- a/Introduction.tex
+++ b/Introduction.tex
@@ -18,10 +18,10 @@ In the case of fork collisions, the DSB repair process is expected to occur fast
 \end{figure*}
 
 % Mutants in the repair pathway
-Mutants in the repair pathway will deal differently with these types of damage. Cells that are \emph{recA}-deficient (\dreca) will be entirely unable to repair two-sided DSBs, and the prolonged action of RecBCD on the DNA will result in the digestion of large parts of the chromosome\cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are however capable of repairing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity (Figure \ref{Fig:DSB_scheme}B, reaction G)\cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA\cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected\cite{Anderson1999}. Despite the loss of its RecA loading activity, the \teneighty\ mutant is still able to repair two-sided DSBs. \teneighty CD will unwind DNA at the break without degrading it, and the Single-Strand Binding protein (SSB) will coat the 3' ssDNA, while the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex will displace SSB and load RecA, allowing for homologous recombination to occur. This process allows the \teneighty\ mutant to repair both two-sided DSBs and DSBs generated through replication fork collision, albeit at a slower rate. Of note, a \dreca-\teneighty double-mutant, which lacks both the RecA protein and RecB's nuclease activity, would be entirely unable to repair both types of DSBs.
+Mutants in the repair pathway will deal differently with these types of damage. Cells that are \emph{recA}-deficient (\dreca) will be entirely unable to repair two-sided DSBs, and the prolonged action of RecBCD on the DNA will result in the digestion of large parts of the chromosome\cite{Horii1968, Chow2007}. \emph{recA}-deficient cells are however capable of repairing DSBs arising from fork reversal, thanks to RecBCD's exonuclease activity (Figure \ref{Fig:DSB_scheme}B, reaction G)\cite{Seigneur1998, Michel2001}. The $D_{1080} \rightarrow A$ point mutation in the RecB subunit of the RecBCD complex (\teneighty) abolishes RecB's nuclease activity, as well as its ability to load the RecA protein on DNA\cite{Yu1998, Wang2000}. The other activities of the complex (DSB recognition, DNA unwinding, Chi-recognition) are unaffected\cite{Anderson1999}. Despite the loss of its RecA loading activity, the \teneighty\ mutant is still able to repair two-sided DSBs. \teneighty CD will unwind DNA at the break without degrading it, and the Single-Strand Binding protein (SSB) will coat the 3' ssDNA, while the RecJ exonuclease degrades the 5' ssDNA. Finally, the RecFOR complex will displace SSB and load RecA, allowing for homologous recombination to occur\cite{Ivancic-Bace_2003}. This process should allow the \teneighty\ mutant to repair both two-sided DSBs and DSBs generated through replication fork collision, albeit at a slower rate. Of note, a \dreca-\teneighty double-mutant, which lacks both the RecA protein and RecB's nuclease activity, would be entirely unable to repair both types of DSBs.
 
 % Ciprofloxacin
-Ciprofloxacin is an antibiotic of the fluor\-quinolones family, which causes DSBs. Im \emph{E. coli}, it does so by binding covalently to DNA topoisomerase II (gyrase), and trapping it in a DNA-bound conformation\cite{Kohanski2010}. Even though it is known that ciprofloxacin creates DSBs that are repaired by RecBCD, the exact mechanism through which the DSBs are created is still unclear. Since the poisoned gyrase is tightly bound to DNA, it might cause replication fork collisions, and the subsequent repair of a chicken foot structure (Figure \ref{Fig:DSB_scheme}B). The ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, upon removal of the gyrase (which likely involves the ExoVII nuclease), we can reasonably expect the formation of a two-sided DSB. It is likely that in fast-growing cells, which contain multiple replication forks, both processes are taking place.
+Ciprofloxacin is an antibiotic of the fluor\-quinolones family, which causes DSBs. Im \emph{E. coli}, it does so by binding covalently to DNA topoisomerase II (gyrase), and trapping it in a DNA-bound conformation\cite{Kohanski2010}. Even though it is known that ciprofloxacin creates DSBs that are repaired by RecBCD, the exact mechanism through which the DSBs are created is still unclear. Since the poisoned gyrase is tightly bound to DNA, it is likely to cause replication fork collisions\cite{Wentzell2000, Drlica2008}, and the subsequent repair of a chicken foot structure (Figure \ref{Fig:DSB_scheme}B). Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, upon removal of the gyrase (through a process that involves the ExoVII nuclease\cite{Huang2021}), we can reasonably expect the formation of a two-sided DSB. This is supported by previous observations that ciprofloxacin can cause DSBs independently of DNA replication\cite{Zhao2006}. Taken together, these results suggest that in fast-growing cells, which contain multiple replication forks, both replication-dependent and independent DSBs occur.
 
 % Overview of the article
-In this study, we aimed to learn more about the repair of ciprofloxacin-induced DSBs by RecBCD. We took advantage of RecBCD's low copy number ($\sim$5 molecules per cell on average\cite{Lepore2019a}) to perform enhanced localisation microscopy\cite{Yu2006, Elf2007} using a fully functional fusion of RecB to the Halo-tag that was previously developed and tested in the lab\cite{Lepore2019a}. This allowed us to detect and localise RecB molecules that were bound to DNA \emph{in-vivo}, and in a time-resolved manner. This allowed us to estimate how long RecBCD stays bound to DNA \emph{in-vivo}. By exposing cells to ciprofloxacin during imaging, we were able to look at the evolution of the repair process over time, and assess how cells were coping with different levels of DNA damage. To complete our view of the repair process, we imaged a fluorescent fusion to the RecA protein in the same conditions. Finally, imaging RecB and RecA in the \dreca, \teneighty and \dreca-\teneighty mutants gave us insight into the factors that might affect RecBCD's dissociation from the DNA.
+In this study, we aimed to learn more about the repair of ciprofloxacin-induced DSBs by RecBCD. We took advantage of RecBCD's low copy number ($\sim$5 molecules per cell on average\cite{Lepore2019a}) to perform enhanced localisation microscopy\cite{Yu2006, Elf2007} using a fully functional fusion of RecB to the Halo-tag that was previously developed and tested in the lab\cite{Lepore2019a}. This allowed us to detect and localise DNA-bound RecB molecules \emph{in-vivo}, and to estimate how long RecBCD stays bound to DNA. By exposing cells to different ciprofloxacin concentrations during imaging, we were able to look at the evolution of the repair process over time, and assess how cells were coping with different levels of DNA damage. To broaden our view of the repair process, we imaged a fluorescent fusion to the RecA protein in the same conditions. Finally, imaging RecB in the \dreca, \teneighty\ and \dreca-\teneighty\ mutants gave us insight into the factors that might affect RecBCD's dissociation from the DNA.
